<resources>
    <string name="app_name" translatable="false">pokedex</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="lucas_imageView" translatable="false">Lucas</string>
    <string name="danilo_imageView" translatable="false">Danilo</string>
    <string name="giovanni_imageView" translatable="false">Giovanni</string>
    <string name="title_activity_about_lucas">about_lucas</string>
    <string name="aboutlucas">Estudante do 5º periodo de ciencias da computação
        da universidade catolica de pernambuco,
    possuo 19 anos, e faz 3 anos que conheci o mundo da programação, amo jogar alguns jogos nas horas vagas.
    </string>
    <string name="fa_lucas">CURSANDO - CIÊNCIA DA COMPUTAÇÃO - 5º
        COMPLETO - ENSINO MÉDIO</string>
    <string name="about_giovanni">Atualmente estudando ciência da computação na Unicap e estagiando na área de desenvolvimetno web
        com springboot e, infelizmente, JSP :)
    </string>
    <string name="description">
        Um pouco sobre mim
    </string>

    <!-- Strings user for pokemon name -->
    <string name="pokemon001">Bulbasaur</string>
    <string name="pokemon002">Ivysaur</string>
    <string name="pokemon003">Venusaur</string>
    <string name="pokemon004">Charmander</string>

    <!-- Strings used for types names -->
    <string name="grass">GRASS</string>
    <string name="poison">POISON</string>
    <string name="fire">FIRE</string>
</resources>